--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
 
 :root {
-  --color-primary: #5ec576;
-  --color-secondary: #ffcb03;
-  --color-tertiary: #ff585f;
-  --color-primary-darker: #4bbb7d;
-  --color-secondary-darker: #ffbb00;
-  --color-tertiary-darker: #fd424b;
-  --color-primary-opacity: #5ec5763a;
-  --color-secondary-opacity: #ffcd0331;
-  --color-tertiary-opacity: #ff58602d;
-  --gradient-primary: linear-gradient(to top left, #39b385, #9be15d);
-  --gradient-secondary: linear-gradient(to top left, #ffb003, #ffcb03);
+  --color-primary: #ffc34d;
+  --color-secondary: #ffc34d;
+  --color-tertiary: #ffc34d;
+  --color-primary-darker: #ffc34d;
+  --color-secondary-darker: #ffc34d;
+  --color-tertiary-darker: #ffc34d;
+  --color-primary-opacity: #ffc34d;
+  --color-secondary-opacity: #ffc34d;
+  --color-tertiary-opacity: #ffc34d;
+  --gradient-primary: #ffc34d;
+  --gradient-secondary: #ffc34d;
 }
 
 * {
@@ -26,11 +26,11 @@ html {
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: 'GT Maru', sans-serif;
   font-weight: 300;
-  color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
   line-height: 1.9;
-  background-color: #000000;
+  background-color: #f1efe3;
 }
 
 /* GENERAL ELEMENTS */
@@ -96,7 +96,7 @@ body {
 }
 
 p {
-  color: rgb(255, 255, 255);
+  color: rgb(#fff);
 }
 
 /* This is BAD for accessibility! Don't do in the real world! */
