--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ h4 {
 }
 
 .header__img {
-  width: 100%;
+  width: 500;
   grid-column: 2 / 3;
   grid-row: 1 / span 4;
   transform: translateY(-6rem);
