--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
   color: rgb(0, 0, 0);
   line-height: 1.9;
   background-color: #f1efe3;
+  overflow-x: hidden; /* This prevents horizontal scrolling */
+  overflow-y: scroll; /* This allows vertical scrolling */
 }
 
 /* GENERAL ELEMENTS */
