--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   background-color: #f1efe3;
   overflow-x: hidden; /* This prevents horizontal scrolling */
   overflow-y: scroll; /* This allows vertical scrolling */
+  overflow: hidden;
 }
 
 /* GENERAL ELEMENTS */
