--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ h1 {
 /***-----hero section start-------***/
 
 .hero {
-  background: url("https://www.camphouse.net/img/img-4.jpg");
+  background: url("https://www.camphouse.net/img/hero-bg.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
