--- a/styles.css
+++ b/styles.css
@@ -27,9 +27,9 @@
   --general-font-size: 2rem;
   --primary-title-font-size: 4.8rem;
   --secondary-title-font-size: 4rem;
-  --main-font-family-light: "GT Maru", sans-serif;
-  --main-font-family-medium: "GT Maru", sans-serif;
-  --main-font-family-bold: "GT Maru", sans-serif;
+  --main-font-family-light: "Whitney Light", sans-serif;
+  --main-font-family-medium: "Whitney Medium", sans-serif;
+  --main-font-family-bold: "Whitney Bold", sans-serif;
   --num-of-grid-columns: 4;
   --section-spacing: 5.6rem 2.4rem;
   --container-width: 126rem;
