--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
 :root {
   --light-clr: #fff;
   --dark-clr: #23272a;
-  --brand-clr: #7685e5;
+  --brand-clr: #ffc34d; /*--- CAMPERS YELLOW ---*/
   --off-white-clr: #f6f6f6;
   --general-font-size: 2rem;
   --primary-title-font-size: 4.8rem;
